helm_deployment/nginx-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demoapp
  name: nginx-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demoapp
